<resources>
    <string name="app_name">智安物联</string>
    <string name="permissions_tips">本应用需要以下权限</string>

    <string name="main_tv_home">智家</string>
    <string name="main_tv_control">控制</string>
    <string name="main_tv_running">运行中</string>
    <string name="main_tv_running_devices">运行中的设备</string>
    <string name="main_tv_setting">设置</string>

    <string name="loading">正在加载中...</string>

    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_get_phone_check">获取验证码</string>
    <string name="login_set_phone_check">输入验证码</string>
    <string name="login_sms_code_tips">验证码已经发送您的手机，请注意查收！</string>
    <string name="login_agree">我已阅读并同意《智安物联用户隐私协议》</string>
    <string name="login_tips_tittle">智安物联用户隐私协议</string>
    <string name="login_tips_content">以下隐私协议是本游戏对用户隐私保护的许诺，请您务必仔细阅读本协议，
        以了解我们关于管理您个人信息的情况。本隐私协议的全部条款属于本软件用户服务协议的重要部份之一。</string>
    <string name="login_agree_alert">请勾选我已阅读并同意\n《智安物联用户隐私协议》</string>
    <string name="login_thirty">第三方登录</string>
    <string name="login_network_error">网络不可用</string>
    <string name="login_phone_error">请输入正确的手机号码</string>
    <string name="login_code_error">验证码错误</string>

    <string name="video_watch">可视对讲</string>
    <string name="video_disconnect">还未连接设备</string>
    <string name="video_un_add">还未添加设备</string>
    <string name="video_add">添加设备</string>

    <string name="main_environment_monitor">环境监控</string>

    <string name="main_video_monitor">视频监控</string>

    <string name="main_common_scenes">常用场景</string>
    <string name="main_scenes_leave_home">离家模式</string>
    <string name="main_scenes_go_home">回家模式</string>
    <string name="main_scenes_safe">安全模式</string>
    <string name="main_scenes_sleep">睡眠模式</string>

    <string name="control"></string>
    <string name="control_bed_room">卧室设备：</string>
    <string name="control_living_room">客厅设备：</string>
    <string name="control_balcony">阳台设备：</string>
    <string name="control_security_sense">安防传感器</string>
    <string name="control_linght_sense">灯光开关</string>
    <string name="control_encironment_sense">环境传感器</string>

    <string name="setting_personal">个人信息</string>
    <string name="setting_sense">情景模式设置</string>
    <string name="setting_manager">配置管理</string>
    <string name="setting_password">密码管理</string>
    <string name="setting_connect">连接模式</string>
    <string name="setting_refresh">刷新服务器</string>
    <string name="setting_recover">恢复出厂设置</string>
    <string name="setting_logout">退出登录</string>

    <string name="persion_nick_name">昵称</string>
    <string name="persion_nick_name_ed">请输入您的昵称</string>
    <string name="persion_phone_number">手机</string>

    <string name="sense_add">添加情景</string>

    <string name="manager_upload">上传配置</string>
    <string name="manager_download">下载配置</string>
    <string name="manager_tips">是否确认上传配置</string>

    <string name="pass_word_change">修改密码</string>
    <string name="pass_word_manager_limit">临时密码管理</string>
    <string name="pass_word_original">初始密码</string>
    <string name="pass_word_original_hint">请输入初始密码</string>
    <string name="pass_word_new">新密码</string>
    <string name="pass_word_new_hint">请输入新密码</string>
    <string name="pass_word_again">重复新密码</string>
    <string name="pass_word_again_hint">请再次输入密码</string>
    <string name="pass_word_random">随机密码</string>

    <string name="connect_type_inner_net">内网模式</string>
    <string name="connect_type_inner_net_ex">... ...</string>
    <string name="connect_type_out_net">外网模式</string>
    <string name="connect_type_out_net_ex">... ...</string>
    <string name="connect_type_auto">自动模式</string>
    <string name="connect_type_auto_ex">... ...</string>

    <string name="reset_tittle">删除主机会不能连接设备\n是否继续</string>
    <string name="reset_cancel">考虑一下</string>
    <string name="reset_password">请输入密码</string>
    <string name="reset_ok">恢复出厂</string>

    <string name="message_total">消息概览</string>
    <string name="message_security">安防信息</string>
    <string name="message_environment">环境指数</string>
    <string name="message_environment_level">环境质量指数</string>
    <string name="message_pull">推送消息</string>

    <string name="message_content_tittle">消息列表</string>

    <string name="device_manager_tittle">主机管理</string>
    <string name="device_manager">管理</string>
    <string name="device_connect_failed">连接不成功</string>
    <string name="device_connect_success">连接成功</string>
    <string name="device_connect_ing">正在连接中...</string>
    <string name="connect_ing">连接中</string>
    <string name="done">完成</string>
    <string name="device_add">添加主机</string>
    <string name="device_delete">删除主机将不能连接设备\n是否继续</string>

    <string name="add_device_tlttle">添加新设备</string>
    <string name="device_name">设备名称</string>
    <string name="device_hint_input">请输入设备名称</string>
    <string name="device_lock">智能门锁</string>
    <string name="lock_t1">T1</string>
    <string name="lock_y1">Y1</string>
    <string name="device_switch">智能开关</string>
    <string name="device_control">智能遥控</string>
    <string name="device_manager_os">智能主机</string>
    <string name="device_environment">环境传感器</string>
    <string name="device_security">智能安防</string>
    <string name="device_window">智能窗帘</string>

    <string name="switch_kx">KX系列面板</string>
    <string name="switch_ks">KS系列面板</string>
    <string name="switch_1">一开</string>
    <string name="switch_2">二开</string>
    <string name="switch_3">三开</string>
    <string name="switch_sense">情景开关</string>

    <string name="control_hp1">HP1红外遥控</string>

    <string name="environment_zg1">ZG1环境监测器</string>
    <string name="environment_gas">燃气传感器</string>
    <string name="environment_smoke">烟雾传感器</string>

    <string name="security_s1">S1全景摄像机</string>
    <string name="security_human">人体探测器</string>
    <string name="security_door_window">门窗磁探测器</string>

    <string name="curtain_c1">C1电动窗帘</string>

    <string name="add_new_room">添加新房间</string>
    <string name="add_new_device">添加新设备</string>
    <string name="room_often">自定义</string>
    <string name="room_bedroom">主卧</string>
    <string name="room_bedroom1">卧室</string>
    <string name="room_second_room">次卧</string>
    <string name="room_living_room">客厅</string>
    <!--<string name="room_hallway">玄关</string>-->
    <!--<string name="room_wine_cabinet">酒柜</string>-->
    <string name="room_balcony">阳台</string>
    <string name="room_dining">餐厅</string>
    <string name="room_garden">花园</string>
    <string name="room_toilet">卫生间</string>
    <string name="room_input">请输入房间名称</string>
    <string name="room_name">房间名称</string>
    <string name="room_icon">房间图标</string>

    <string name="save">保存</string>
    <string name="add">添加</string>

    <string name="add_host">添加主机</string>
    <string name="add_host_by_qr_code">二维码添加</string>
    <string name="add_host_by_hand">手动输入</string>
    <string name="add_host_by_inner_net">内网添加</string>


    <!--zxing-->
    <string name="qr_code_tittle">二维码添加设备</string>
    <string name="qr_code_tips_1">请将二维码或条形码放置在识别框里</string>
    <string name="qr_code_tips_2">即可自动扫描</string>
    <string name="qr_code_miss">启动出现异常，请重新打开</string>
    <string name="button_ok">确定</string>

    <string name="sense_new">新增情景</string>
    <string name="add_sense">情景名称</string>
    <string name="add_sense_name">请输入情景名称</string>
    <string name="add_sense_icons">自定义图标</string>
    <string name="add_sense_examples">推荐情景</string>
    <string name="add_sense_4"></string>

    <string name="switch_type_1">一开开关</string>
    <string name="switch_type_2">两开开关</string>
    <string name="switch_table_line">台灯</string>
    <string name="switch_table_line1">射灯</string>
    <string name="switch_air_control">空调遥控器</string>
    <string name="switch_win_control">窗帘遥控器</string>
    <string name="switch_red_control">人体红外感应器</string>
    <string name="switch_camera_control">摄像头</string>
    <string name="room_book">书房</string>
    <string name="switch_room_line">房灯</string>
    <string name="set_time">设置执行时间</string>
    <string name="message_detail">消息详情</string>
    <string name="input_device_number">请输入设备编号</string>
    <string name="edit_host">编辑主机名称</string>

    <string name="exist">再按一次退出程序</string>
    <string name="logout">是否退出登录？</string>
</resources>
