<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/comm_tittle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_size_20"
        android:background="@color/color_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textSize="@dimen/dimen_size_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_size_60"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:background="@drawable/login_bg">

            <EditText
                android:id="@+id/customer_et_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_50"
                android:layout_marginLeft="@dimen/dimen_size_20"
                android:background="@null"
                android:hint="@string/room_input"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_20"
            android:text="@string/room_icon"
            android:textSize="@dimen/dimen_size_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_20"
            android:background="@drawable/login_bg">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
