<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    tools:context=".ui.activity.AddSenseUI">

    <include layout="@layout/comm_tittle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_size_20"
        android:layout_marginTop="@dimen/dimen_size_20"
        android:text="@string/add_sense"
        android:textSize="@dimen/dimen_size_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_size_20"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:layout_marginRight="@dimen/dimen_size_20"
        android:background="@drawable/home_scenes">

        <EditText
            android:id="@+id/add_sense_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_size_50"
            android:layout_marginLeft="@dimen/dimen_size_10"
            android:background="@null"
            android:hint="@string/add_sense_name"
            android:textSize="@dimen/dimen_size_15" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_size_20"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:layout_marginRight="@dimen/dimen_size_20"
        android:background="@drawable/home_scenes"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_size_10"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:text="@string/add_sense_icons"
            android:textSize="@dimen/dimen_size_15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_size_20"
        android:layout_marginTop="@dimen/dimen_size_10"
        android:layout_marginRight="@dimen/dimen_size_20"
        android:background="@drawable/home_scenes"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_size_10"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:text="@string/add_sense_examples"
            android:textSize="@dimen/dimen_size_15" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_examples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10" />
    </LinearLayout>
</LinearLayout>
