<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:background="@color/color_while">

        <!--左边返回键-->
        <ImageView
            android:id="@+id/comm_tittle_iv_left"
            android:layout_width="@dimen/dimen_size_30"
            android:layout_height="@dimen/dimen_size_30"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dimen_size_20"
            android:background="@mipmap/back"
            android:visibility="visible" />

        <!--中间标题-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_manager_tittle"
            android:textColor="@color/color_black"
            android:textSize="@dimen/dimen_size_20" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_size_20"
        android:text="@string/device_name"
        android:textSize="@dimen/dimen_size_15" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50"
        android:layout_marginLeft="@dimen/dimen_size_20"
        android:layout_marginRight="@dimen/dimen_size_20">

        <EditText
            android:id="@+id/add_device_ed_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_size_20"
            android:background="@null"
            android:hint="@string/device_hint_input"
            android:inputType="text"
            android:singleLine="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_size_20"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_device_recycler_view_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_device_recycler_view_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

    </LinearLayout>

</LinearLayout>
